--- a/product_info.html
+++ b/product_info.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/favorites.js" type="module"></script>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/recipe.js" type="module"></script>
 </head>
 <body>
     <header id="dynamic-header" class="container"></header>
+
+    <main class="container">
+        <section class="recipe"></section>
+    </main>
+
     <footer id="dynamic-footer" class="container"></footer>
 </body>
 </html>
