--- a/header.html
+++ b/header.html
@@ -1,8 +1,7 @@
-<div class="logo">
-    <a href="index.html">
-        <img src="img/logo.png" alt="Logo">
-    </a>
-</div>
+<a href="index.html" class="logo">
+    <img src="img/logo.png" alt="Logo">
+</a>
+
 
 <div class="favorites">
     <a href="favorites.html">
