--- a/favorites.html
+++ b/favorites.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,14 @@
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/favorites.js" type="module"></script>
 </head>
+
 <body>
     <header id="dynamic-header" class="container"></header>
+    <main class="container favorites-main">
+        <h1>Favorite Recipes</h1>
+        <ul class="product-list"></ul>
+    </main>
     <footer id="dynamic-footer" class="container"></footer>
 </body>
+
 </html>
