--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Final Project</title>
+    <title>Home</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/main.js" type="module"></script>
 </head>
